# gazebo-custom

./: README.md
src/sourceone_description/: CMakeLists.txt  package.xml
src/sourceone_description/config/: joint_names_cerlab_drone.yaml
src/sourceone_description/launch/: sourceone.rviz  sourceone_rviz.launch
src/sourceone_description/meshes/: BL_Prop.STL  BR_Prop.STL  FL_Prop.STL  FR_Prop.STL  my_mesh.world  sourceone_base.STL
src/sourceone_description/urdf/: sourceone.gazebo  sourceone.xacro
src/sourceone_gazebo/launch/: gazebo.launch
